fixed resume button bug, was being covered by container, brought it's z-index forward to 100

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,4 +1,5 @@
 .resume-dlbutton {
+  z-index: 100;
   border: 3px solid var(--isabelline);
   border-style: outset;
   border-radius: 5px;
